fix: fix layout for search bar on mobile and mobile

--- a/packages/frontend/src/components/Header/search.module.css
+++ b/packages/frontend/src/components/Header/search.module.css
@@ -8,7 +8,6 @@
   height: 2.25rem;
   max-height: 2.25rem;
   user-select: none;
-  margin-left: 1rem;
 }
 
 .inputContainer {
@@ -87,7 +86,7 @@ input:focus-visible {
   left: 0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1002;
-  width: 320px;
+  width: 100%;
   opacity: 0.4;
   transition: width 0.2s ease, opacity 0.2s ease;
 }
@@ -101,7 +100,8 @@ input:focus-visible {
 .showDropdownMenu {
   border: 3px solid #000;
   border-radius: 0 0 6px 6px;
-  width: 672px;
+  width: 100%;
+  box-sizing: border-box;
   opacity: 1;
 }
 
@@ -255,27 +255,12 @@ input:focus-visible {
   padding: 0.25rem 0.625rem;
 }
 
-@media screen and (max-width: 768px) {
-  .menuItems {
-    left: 0;
-    width: 100%;
-    position: fixed;
-    top: 9.375rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 1002;
-  }
-
-  .menuList {
-    width: 100%;
-    min-height: 100vh;
-  }
-
+@media screen and (max-width: 1024px) {
   .inputContainer {
-    width: 100%;
+    width: calc(100% - 2rem);
+    margin: 0 auto;
   }
-
   .searchbarContainer {
-    margin-left: 1rem;
-    margin-right: 1rem;
+    padding-top: 0.5rem;
   }
 }
